Create rent and test
