# docs/swagger.yaml
@@ -20,6 +20,19 @@ definitions:
       type_id:
         type: integer
     type: object
+  models.RentRequest:
+    properties:
+      end_date:
+        type: string
+      movie_ids:
+        items:
+          type: integer
+        type: array
+      start_date:
+        type: string
+      user_id:
+        type: integer
+    type: object
   models.Response:
     properties:
       data: {}
@@ -36,9 +49,13 @@ definitions:
         type: string
     type: object
 info:
-  contact: {}
-  description: 'A simple API to manage movie rentals \n GitHub Repository: https://github.com/jorgemvv01/go-api'
-  title: VideoClub Go - REST API
+  contact:
+    email: jorgemvv01@gmail.com
+    name: Jorge Mario Villarreal V.
+    url: https://www.linkedin.com/in/jorgemariovillarreal/
+  description: 'A simple Go-REST-API to manage movie rentals \n GitHub Repository:
+    https://github.com/jorgemvv01/go-api'
+  title: VideoClub / Go-REST-API
   version: "1.0"
 paths:
   /genres:
@@ -329,6 +346,34 @@ paths:
       summary: Update Movie
       tags:
       - Movies
+  /rent/create:
+    post:
+      description: Create a new rent.
+      parameters:
+      - description: Create rent
+        in: body
+        name: tags
+        required: true
+        schema:
+          $ref: '#/definitions/models.RentRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: Create rent
+      tags:
+      - Rent
   /types/:
     get:
       description: Get all Types
